fixed overlapping figcaption with callout

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -8,6 +8,7 @@ body {
     border: 1px solid #eee;
     border-left-width: 5px;
     border-radius: 3px;
+    display: -webkit-inline-box;
 }
 .bs-callout h4 {
     margin-top: 0;
